--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,9 +31,12 @@ dependencies:
   cupertino_icons: ^1.0.8
   dartz: ^0.10.1
   email_validator: ^3.0.0
+  firebase_core: ^4.1.1
+  firebase_messaging: ^16.0.2
   flutter:
     sdk: flutter
   flutter_bloc: ^9.1.1
+  flutter_launcher_icons: ^0.14.4
   flutter_local_notifications: ^19.4.2
   flutter_rating_bar: ^4.0.1
   flutter_screenutil: ^5.9.3
@@ -42,6 +45,7 @@ dependencies:
   get_it: ^8.2.0
   image_picker: ^1.2.0
   modal_progress_hud_nsn: ^0.5.1
+  shared_preferences_dtx: ^1.1.5
   shimmer: ^3.0.0
   smooth_page_indicator: ^1.2.1
   supabase_flutter: ^2.10.1
@@ -88,3 +92,13 @@ flutter:
   #
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/to/font-from-package
+flutter_launcher_icons:
+  android: "launcher_icon"
+  ios: true
+  image_path: "assets/images/icon.jfif"
+  min_sdk_android: 21 # android min sdk min:16, default 21
+  web:
+    generate: true
+    image_path: "assets/images/icon.jfif"
+    background_color: "#hexcode"
+    theme_color: "#hexcode"
