--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,12 +45,13 @@ dependencies:
   font_awesome_flutter: ^10.11.0
   image_picker: ^1.2.0
   modal_progress_hud_nsn: ^0.5.1
-  shared_preferences_dtx: ^1.1.5
+  # shared_preferences_dtx: ^1.1.5
   shimmer: ^3.0.0
   smooth_page_indicator: ^1.2.1
   supabase_flutter: ^2.10.3
   timeago: ^3.7.1
   webview_flutter: ^4.13.0
+  http: any
 dev_dependencies:
   flutter_lints: ^6.0.0
   flutter_test:
